--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<header class="page-header">
 			<a href="index.html">
 				<img src="img/class_icon.svg"
-					alt="Logo (directs to home page)"
+					alt="Logo image (directs to home page)"
 					class="page-header__item"
 					id="page-header__icon" />
 			</a>
