--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				California.
 			</p>
 			<a href="#"
-				class="default__link">Check out some of my code</a> |
+				class="default__link">Check out some of my code!</a> |
 			<a href="#"
 				class="default__link">Default Link</a>
 			<div class="button_group">
@@ -87,7 +87,7 @@
 			</div>
 		</section>
 		<footer class="page-footer">
-			<p class="small_text">Find me on</p>
+			<p class="small_text">Find me on:</p>
 			<div class="social-media">
 				<img src="img/github_icon.svg"
 					alt="GitHub" />
