changed alt on profile__portrait

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<section class="profile">
 			<img src="img/mypicture.jpeg"
 				class="profile__portrait"
-				alt="Rory Van Blaricom & dog named Pancake Portrait" />
+				alt="Portrait of Rory Van Blaricom and his dog, Pancake." />
 			<h1 class="heading__index"><span id="hello_world">Hello World!<span id="cli_prompt">_ </span></span></h1>
 			<p class="regular_text">
 				My name is Rory Van Blaricom. I am a <span id="code_text">&lt;web&gt;</span> developer from
