--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport"
 			content="width=device-width, initial-scale=1">
-		<title>Lisa Gringl portfolio</title>
+		<title>Rory Van Blaricom | Software Developer</title>
 		<link rel="shortcut icon"
 			href="./img/favicon-32x32.png"
 			type="image/x-icon" />
