--- a/index.html
+++ b/index.html
@@ -89,15 +89,20 @@
 		<footer class="page-footer">
 			<p class="small_text">Find me on:</p>
 			<div class="social-media">
-				<img src="img/github_icon.svg"
-					alt="GitHub" />
-				<img src="img/twitter_icon.svg"
-					alt="Twitter" />
-				<img src="img/linkedin_icon.svg"
-					alt="LinkedIn" />
+				<a href="https://github.com/RoryV91">
+					<img src="img/github_icon.svg"
+						alt="GitHub" />
+				</a>
+				<a href="https://twitter.com/R0ry_V">
+					<img src="img/twitter_icon.svg"
+						alt="Twitter" />
+				</a>
+				<a href="https://www.linkedin.com/in/rory-van-blaricom/">
+					<img src="img/linkedin_icon.svg"
+						alt="LinkedIn" />
+				</a>
 			</div>
 		</footer>
-		<script src="js/tota11y.min.js"></script>
 	</body>
 
 </html>
