--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			referrerpolicy="no-referrer" />
 		<link rel="stylesheet"
 			type="text/css"
-			href="css/styles.production.css" />
+			href="css/styles.css" />
 	</head>
 
 	<body>
@@ -89,15 +89,18 @@
 		<footer class="page-footer">
 			<p class="small_text">Find me on:</p>
 			<div class="social-media">
-				<a href="https://github.com/RoryV91">
+				<a href="https://github.com/RoryV91"
+					class="social-media__item">
 					<img src="img/github_icon.svg"
 						alt="GitHub" />
 				</a>
-				<a href="https://twitter.com/R0ry_V">
+				<a href="https://twitter.com/R0ry_V"
+				class="social-media__item">
 					<img src="img/twitter_icon.svg"
 						alt="Twitter" />
 				</a>
-				<a href="https://www.linkedin.com/in/rory-van-blaricom/">
+				<a href="https://www.linkedin.com/in/rory-van-blaricom/"
+				class="social-media__item">
 					<img src="img/linkedin_icon.svg"
 						alt="LinkedIn" />
 				</a>
