removed tota11y, changed spacing of social media links

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 			referrerpolicy="no-referrer" />
 		<link rel="stylesheet"
 			type="text/css"
-			href="css/styles.production.css" />
+			href="css/styles.css" />
 	</head>
 
 	<body>
@@ -69,19 +69,10 @@
 		<section class="contact-page">
 			<h1>Contact</h1>
 			<div class="contact-info">
-				CareerFoundry GmbH<br />
-				Lohmühlenstraße 65<br />
-				12435 Berlin<br />
-				Deutschland<br />
-				<br />
-				Tel: +49 30 4849 2016
-				<a href="tel:+493048492016"
-					class="default__link">Call</a><br />
-				Skype: <a href="skype:hello.careerfoundry"
-					class="default__link"> hello.careerfoundry</a><br />
-				Email:
-				<a href="mailto:office@careerfoundry.com"
-					class="default__link">office@careerfoundry.com</a>
+				Have some work for me?<br />
+				Want to collaborate?<br />
+				Just want to say hi?<br />
+				Go ahead and write me something below, and I will be sure to get back to you!<br />
 			</div>
 			<form action="#"
 				method="post"
@@ -117,17 +108,25 @@
 			</form>
 		</section>
 		<footer class="page-footer">
-			<p class="small_text">Find me on</p>
+			<p class="small_text">Find me on:</p>
 			<div class="social-media">
-				<img src="img/github_icon.svg"
-					alt="GitHub" />
-				<img src="img/twitter_icon.svg"
-					alt="Twitter" />
-				<img src="img/linkedin_icon.svg"
-					alt="LinkedIn" />
+				<a href="https://github.com/RoryV91"
+					class="social-media__item">
+					<img src="img/github_icon.svg"
+						alt="GitHub" />
+				</a>
+				<a href="https://twitter.com/R0ry_V"
+					class="social-media__item">
+					<img src="img/twitter_icon.svg"
+						alt="Twitter" />
+				</a>
+				<a href="https://www.linkedin.com/in/rory-van-blaricom/"
+					class="social-media__item">
+					<img src="img/linkedin_icon.svg"
+						alt="LinkedIn" />
+				</a>
 			</div>
 		</footer>
-		<script src="js/tota11y.min.js"></script>
 	</body>
 
 </html>
