--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
 			referrerpolicy="no-referrer" />
 		<link rel="stylesheet"
 			type="text/css"
-			href="css/styles.production.css" />
+			href="css/styles.css" />
 	</head>
 
 	<body>
@@ -76,7 +76,8 @@
 						written in React.js. Additionally, I've created the HTML and CSS
 						templates.
 					</p>
-					<a href="#" class="default__link">See project on GitHub</a>
+					<a href="#"
+						class="default__link">See project on GitHub</a>
 				</div>
 				<div class="project-list__item">
 					<div class="project-list__item__title">
@@ -90,7 +91,8 @@
 						written in React.js. Additionally, I've created the HTML and CSS
 						templates.
 					</p>
-					<a href="#" class="default__link">See project on GitHub</a>
+					<a href="#"
+						class="default__link">See project on GitHub</a>
 				</div>
 				<div class="project-list__item">
 					<div class="project-list__item__title">
@@ -104,7 +106,8 @@
 						written in React.js. Additionally, I've created the HTML and CSS
 						templates.
 					</p>
-					<a href="#" class="default__link">See project on GitHub</a>
+					<a href="#"
+						class="default__link">See project on GitHub</a>
 				</div>
 				<div class="project-list__item">
 					<div class="project-list__item__title">
@@ -118,7 +121,8 @@
 						written in React.js. Additionally, I've created the HTML and CSS
 						templates.
 					</p>
-					<a href="#" class="default__link">See project on GitHub</a>
+					<a href="#"
+						class="default__link">See project on GitHub</a>
 				</div>
 				<div class="project-list__item">
 					<div class="project-list__item__title">
@@ -132,7 +136,8 @@
 						written in React.js. Additionally, I've created the HTML and CSS
 						templates.
 					</p>
-					<a href="#" class="default__link">See project on GitHub</a>
+					<a href="#"
+						class="default__link">See project on GitHub</a>
 				</div>
 				<div class="project-list__item">
 					<div class="project-list__item__title">
@@ -146,22 +151,31 @@
 						written in React.js. Additionally, I've created the HTML and CSS
 						templates.
 					</p>
-					<a href="#" class="default__link">See project on GitHub</a>
+					<a href="#"
+						class="default__link">See project on GitHub</a>
 				</div>
 			</section>
 		</section>
 		<footer class="page-footer">
-			<p>Find me on</p>
+			<p class="small_text">Find me on:</p>
 			<div class="social-media">
-				<img src="img/github_icon.svg"
-					alt="GitHub" />
-				<img src="img/twitter_icon.svg"
-					alt="Twitter" />
-				<img src="img/linkedin_icon.svg"
-					alt="LinkedIn" />
+				<a href="https://github.com/RoryV91"
+					class="social-media__item">
+					<img src="img/github_icon.svg"
+						alt="GitHub" />
+				</a>
+				<a href="https://twitter.com/R0ry_V"
+					class="social-media__item">
+					<img src="img/twitter_icon.svg"
+						alt="Twitter" />
+				</a>
+				<a href="https://www.linkedin.com/in/rory-van-blaricom/"
+					class="social-media__item">
+					<img src="img/linkedin_icon.svg"
+						alt="LinkedIn" />
+				</a>
 			</div>
 		</footer>
-		<script src="js/tota11y.min.js"></script>
 	</body>
 
 </html>
