long overdue update
starting to add links,, change verbiages

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 			<h1>About Me</h1>
 			<p>While I love coding, I also love to be outdoors. Some of my interests include:</p>
 			<ul class="interests">
-				<li class="interest__item">Test-driven development</li>
+				<li class="interest__item">Game development</li>
 				<li class="interest__item">Backend development</li>
 				<li class="interest__item">Frontend development</li>
 				<li class="interest__item">Trail Riding</li>
@@ -3652,21 +3652,26 @@
 				<tbody>
 					<tr>
 						<td>HTML5</td>
-						<td>3</td>
+						<td>5</td>
 						<td>Advanced</td>
 					</tr>
 					<tr>
 						<td>CSS3</td>
-						<td>2</td>
+						<td>3</td>
 						<td>Intermediate</td>
 					</tr>
 					<tr>
 						<td>JavaScript</td>
-						<td>2</td>
+						<td>3</td>
 						<td>Intermediate</td>
 					</tr>
 					<tr>
 						<td>MongoDB</td>
+						<td>3</td>
+						<td>Intermediate</td>
+					</tr>
+					<tr>
+						<td>SQL</td>
 						<td>2</td>
 						<td>Intermediate</td>
 					</tr>
@@ -3680,11 +3685,7 @@
 						<td>1</td>
 						<td>Beginner</td>
 					</tr>
-					<tr>
-						<td>SQL</td>
-						<td>1</td>
-						<td>Beginner</td>
-					</tr>
+
 					<tr>
 						<td>C++</td>
 						<td>1</td>
