--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				My name is Rory Van Blaricom. I am a <span id="code_text">&lt;web&gt;</span> developer from
 				California.
 			</p>
-			<a href="#"
+			<a href="work.html"
 				class="default__link">Check out some of my code!</a> |
 			<a href="#"
 				class="default__link">Default Link</a>
