--- a/work.html
+++ b/work.html
@@ -66,18 +66,33 @@
 			<section class="project-list">
 				<div class="project-list__item">
 					<div class="project-list__item__title">
-						<h2>Mobile web app</h2>
+						<h2>Pokédex App</h2>
 					</div>
 					<img class="thumbnail"
 						src="https://placehold.co/120"
 						alt="Thumbnail image for project">
 					<p class="description">
-						Within this project, I was responsible for the frontend. It’s
-						written in React.js. Additionally, I've created the HTML and CSS
-						templates.
+						This project is a frontend using data from the PokéAPI. It was made suing HTML, CSS, and plain javaScript. 
+					</p>
+					<a href="https://roryv91.github.io/Pokedex-App/"
+						class="default__link">Demo</a>
+					<a href="https://github.com/RoryV91/Pokedex-App"
+						class="default__link">Repository</a>
+				</div>
+				<div class="project-list__item">
+					<div class="project-list__item__title">
+						<h2>myFlix Client</h2>
+					</div>
+					<img class="thumbnail"
+						src="https://placehold.co/120"
+						alt="Thumbnail image for project">
+					<p class="description">
+						This project is a React client for the myFlixAPI Node.js backend. The entire project is MERN stack as it uses MongoDB.
 					</p>
 					<a href="#"
-						class="default__link">See project on GitHub</a>
+						class="default__link">Demo</a>
+					<a href="#"
+						class="default__link">Repository</a>
 				</div>
 				<div class="project-list__item">
 					<div class="project-list__item__title">
@@ -92,7 +107,9 @@
 						templates.
 					</p>
 					<a href="#"
-						class="default__link">See project on GitHub</a>
+						class="default__link">Demo</a>
+					<a href="#"
+						class="default__link">Repository</a>
 				</div>
 				<div class="project-list__item">
 					<div class="project-list__item__title">
@@ -107,7 +124,9 @@
 						templates.
 					</p>
 					<a href="#"
-						class="default__link">See project on GitHub</a>
+						class="default__link">Demo</a>
+					<a href="#"
+						class="default__link">Repository</a>
 				</div>
 				<div class="project-list__item">
 					<div class="project-list__item__title">
@@ -122,7 +141,9 @@
 						templates.
 					</p>
 					<a href="#"
-						class="default__link">See project on GitHub</a>
+						class="default__link">Demo</a>
+					<a href="#"
+						class="default__link">Repository</a>
 				</div>
 				<div class="project-list__item">
 					<div class="project-list__item__title">
@@ -137,22 +158,9 @@
 						templates.
 					</p>
 					<a href="#"
-						class="default__link">See project on GitHub</a>
-				</div>
-				<div class="project-list__item">
-					<div class="project-list__item__title">
-						<h2>Mobile web app</h2>
-					</div>
-					<img class="thumbnail"
-						src="https://placehold.co/120"
-						alt="Thumbnail image for project">
-					<p class="description">
-						Within this project, I was responsible for the frontend. It’s
-						written in React.js. Additionally, I've created the HTML and CSS
-						templates.
-					</p>
+						class="default__link">Demo</a>
 					<a href="#"
-						class="default__link">See project on GitHub</a>
+						class="default__link">Repository</a>
 				</div>
 			</section>
 		</section>
