--- a/about.html
+++ b/about.html
@@ -28,53 +28,39 @@
 
 	<body>
 		<header class="page-header">
-			<a href="index.html">
-				<img src="img/class_icon.svg"
-					alt="Logo (directs to home page)"
-					class="page-header__item"
-					id="page-header__icon" />
-			</a>
-			<nav class="main-navigation page-header__item">
-				<ul role="menubar"
-					class="navigation-list">
-					<li role="presentation">
+			<nav class="main-navigation page-header__item" aria-label="Main navigation">
+				<ul role="menubar" 
+					class="navigation-list"
+					aria-label="Main menu">
+					<li role="none">
 						<a href="index.html"
 							role="menuitem"
-							class="navigation-list__item default__link">Home</a>
+							class="navigation-list__item default__link"
+							aria-current="false">Home</a>
 					</li>
-					<li role="presentation">
+					<li role="none">
 						<a href="about.html"
 							role="menuitem"
-							class="navigation-list__item default__link navigation-list__item--active">About Me</a>
+							class="navigation-list__item default__link navigation-list__item--active"
+							aria-current="page">About Me</a>
 					</li>
-					<li role="presentation">
+					<li role="none">
 						<a href="contact.html"
 							role="menuitem"
-							class="navigation-list__item default__link">Contact</a>
+							class="navigation-list__item default__link"
+							aria-current="false">Contact</a>
 					</li>
-					<li role="presentation">
+					<li role="none">
 						<a href="work.html"
 							role="menuitem"
-							class="navigation-list__item default__link">Work</a>
+							class="navigation-list__item default__link"
+							aria-current="false">Work</a>
 					</li>
 				</ul>
 			</nav>
 		</header>
 		<section class="about-page">
 			<h1>About Me</h1>
-			<p>While I love coding, I also love to be outdoors. Some of my interests include:</p>
-			<ul class="interests">
-				<li class="interest__item">Game development</li>
-				<li class="interest__item">Backend development</li>
-				<li class="interest__item">Frontend development</li>
-				<li class="interest__item">Trail Riding</li>
-				<li class="interest__item">Climbing/Rappeling</li>
-				<li class="interest__item">Offroad/Overlanding</li>
-			</ul>
-			<a href="files/cv.pdf"
-				class="button__primary"
-				target="_blank"
-				download>Download my CV</a>
 			<svg version="1.1"
 				id="svg2"
 				width="700"
@@ -3637,9 +3623,18 @@
 				<a href="http://www.freepik.com"
 					class="default__link">Designed by Freepik</a>, animated by me!
 			</p>
+						<p>While I love coding, I also love to be outdoors. Some of my interests include:</p>
+			<ul class="interests">
+				<li class="interest__item">Game development</li>
+				<li class="interest__item">Fullstack development</li>
+				<li class="interest__item">Swimming</li>
+				<li class="interest__item">Trail Riding</li>
+				<li class="interest__item">Climbing/Rappeling</li>
+				<li class="interest__item">Offroad/Overlanding</li>
+			</ul>
 
 			<h2>How I became a web developer</h2>
-			<p>Going through two diffrent bootcamps gave me a lot of exposure to a variety of languages, frameworks, and
+			<p>In addition to pursuing my BSCS from WGU, going through two diffrent bootcamps gave me a lot of exposure to a variety of languages, frameworks, and
 				other tools. Here are just some of them:</p>
 			<table class="experience">
 				<thead>
@@ -3691,27 +3686,49 @@
 						<td>1</td>
 						<td>Beginner</td>
 					</tr>
+					<tr>
+						<td>Java</td>
+						<td>1</td>
+						<td>Beginner</td>
+					</tr>
 				</tbody>
 			</table>
 			<p>More coming soon!</p>
+						<a href="files/cv.pdf"
+				class="button__primary"
+				target="_blank"
+				download>Download my CV</a>
 		</section>
 		<footer class="page-footer">
-			<p class="small_text">Find me on:</p>
-			<div class="social-media">
+			<h2 class="small_text">Find me on:</h2>
+			<div class="social-media"
+				role="list">
 				<a href="https://github.com/RoryV91"
-					class="social-media__item">
+					class="social-media__item"
+					role="listitem"
+					aria-label="Visit my GitHub profile">
 					<img src="img/github_icon.svg"
-						alt="GitHub" />
+						alt=""
+						width="30"
+						height="30" />
 				</a>
 				<a href="https://twitter.com/R0ry_V"
-					class="social-media__item">
+					class="social-media__item"
+					role="listitem"
+					aria-label="Visit my Twitter profile">
 					<img src="img/twitter_icon.svg"
-						alt="Twitter" />
+						alt=""
+						width="30"
+						height="30" />
 				</a>
 				<a href="https://www.linkedin.com/in/rory-van-blaricom/"
-					class="social-media__item">
+					class="social-media__item"
+					role="listitem"
+					aria-label="Visit my LinkedIn profile">
 					<img src="img/linkedin_icon.svg"
-						alt="LinkedIn" />
+						alt=""
+						width="30"
+						height="30" />
 				</a>
 			</div>
 		</footer>
