--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport"
 			content="width=device-width, initial-scale=1">
+		<meta name="description"
+			content="Contact Rory Van Blaricom - Web Developer. Get in touch for collaboration, projects, or just to say hello." />
 		<title>Rory Van Blaricom | Contact</title>
 		<link rel="shortcut icon"
 			href="./img/favicon-32x32.png"
@@ -24,44 +26,39 @@
 		<link rel="stylesheet"
 			type="text/css"
 			href="css/styles.css" />
+		<script type="text/javascript"
+			src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 	</head>
 
 	<body>
 		<header class="page-header">
-			<a href="index.html">
-				<img src="img/class_icon.svg"
-					alt="Logo (directs to home page)"
-					class="page-header__item"
-					id="page-header__icon" />
-			</a>
-			<nav class="main-navigation page-header__item">
-				<ul role="menubar"
-					class="navigation-list">
-					<li role="presentation">
+			<nav class="main-navigation page-header__item" aria-label="Main navigation">
+				<ul role="menubar" 
+					class="navigation-list"
+					aria-label="Main menu">
+					<li role="none">
 						<a href="index.html"
 							role="menuitem"
-							class="navigation-list__item 
-							default__link
-							">Home</a>
+							class="navigation-list__item default__link"
+							aria-current="false">Home</a>
 					</li>
-					<li role="presentation">
+					<li role="none">
 						<a href="about.html"
 							role="menuitem"
-							class="navigation-list__item
-							default__link">About Me</a>
+							class="navigation-list__item default__link"
+							aria-current="false">About Me</a>
 					</li>
-					<li role="presentation">
+					<li role="none">
 						<a href="contact.html"
 							role="menuitem"
-							class="navigation-list__item
-							default__link
-							navigation-list__item--active">Contact</a>
+							class="navigation-list__item default__link navigation-list__item--active"
+							aria-current="page">Contact</a>
 					</li>
-					<li role="presentation">
+					<li role="none">
 						<a href="work.html"
 							role="menuitem"
-							class="navigation-list__item
-							default__link">Work</a>
+							class="navigation-list__item default__link"
+							aria-current="false">Work</a>
 					</li>
 				</ul>
 			</nav>
@@ -74,59 +71,170 @@
 				Just want to say hi?<br />
 				Go ahead and write me something below, and I will be sure to get back to you!<br />
 			</div>
-			<form action="#"
-				method="post"
-				id="contact-form">
+			<form id="contact-form">
+				<label class="standard-label"
+					for="contact-name">
+					Name:
+				</label>
+				<input type="text"
+					name="user_name"
+					class="text-input"
+					id="contact-name"
+					maxlength="30"
+					pattern="[A-Za-z\s]{1,30}"
+					title="Please enter a valid name (letters and spaces only, max 30 characters)"
+					placeholder="Your Name"
+					autocomplete="name"
+					autocorrect="off"
+					aria-label="Full name"
+					aria-required="true"
+					required />
 				<label class="standard-label"
 					for="contact-email">
 					Email:
 				</label>
 				<input type="email"
+					name="user_email"
 					class="text-input"
 					id="contact-email"
+					maxlength="50"
+					pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+					title="Please enter a valid email address"
+					placeholder="Your Email"
+					autocomplete="email"
+					aria-label="Email address"
+					aria-required="true"
 					required />
+
 				<label class="standard-label"
 					for="contact-tel">
 					Telephone:
 				</label>
 				<input type="tel"
+					name="telephone"
 					class="text-input"
 					id="contact-tel"
-					pattern="\d{3}[\-]\d{3}[\-]\d{4}" />
+					pattern="\d{3}[\-]\d{3}[\-]\d{4}"
+					title="Please enter a valid phone number in the format XXX-XXX-XXXX"
+					placeholder="123-456-7890"
+					maxlength="12"
+					autocomplete="tel"
+					required
+					aria-label="Telephone number (format: XXX-XXX-XXXX)"
+					aria-required="true" />
+
 				<label class="standard-label"
 					for="contact-msg">
 					Message:
 				</label>
 				<textarea required
+					name="message"
 					class="text-input"
 					id="contact-msg"
-					maxlength="240">
-				</textarea>
+					maxlength="240"
+					placeholder="Your message here."
+					title="Write a message in this field. 240 character max."
+					aria-label="Message"
+					aria-required="true"></textarea>
+
 				<input type="submit"
 					value="Send message"
 					class="button__primary" />
 			</form>
 		</section>
 		<footer class="page-footer">
-			<p class="small_text">Find me on:</p>
-			<div class="social-media">
+			<h2 class="small_text">Find me on:</h2>
+			<div class="social-media"
+				role="list">
 				<a href="https://github.com/RoryV91"
-					class="social-media__item">
+					class="social-media__item"
+					role="listitem"
+					aria-label="Visit my GitHub profile">
 					<img src="img/github_icon.svg"
-						alt="GitHub" />
+						alt=""
+						width="30"
+						height="30" />
 				</a>
 				<a href="https://twitter.com/R0ry_V"
-					class="social-media__item">
+					class="social-media__item"
+					role="listitem"
+					aria-label="Visit my Twitter profile">
 					<img src="img/twitter_icon.svg"
-						alt="Twitter" />
+						alt=""
+						width="30"
+						height="30" />
 				</a>
 				<a href="https://www.linkedin.com/in/rory-van-blaricom/"
-					class="social-media__item">
+					class="social-media__item"
+					role="listitem"
+					aria-label="Visit my LinkedIn profile">
 					<img src="img/linkedin_icon.svg"
-						alt="LinkedIn" />
+						alt=""
+						width="30"
+						height="30" />
 				</a>
 			</div>
 		</footer>
+		<script type="module">
+			import config from './config.js';
+			emailjs.init(config.emailjs.publicKey);
+			(function () {
+				const phoneInput = document.getElementById('contact-tel');
+				phoneInput.addEventListener('input', function (e) {
+					let numbers = this.value.replace(/\D/g, '');
+					numbers = numbers.substring(0, 10);
+
+					if (numbers.length > 6) {
+						this.value = `${numbers.substring(0, 3)}-${numbers.substring(3, 6)}-${numbers.substring(6)}`;
+					} else if (numbers.length > 3) {
+						this.value = `${numbers.substring(0, 3)}-${numbers.substring(3)}`;
+					} else {
+						this.value = numbers;
+					}
+				});
+
+				const form = document.getElementById('contact-form');
+				form.addEventListener('submit', async function (e) {
+					e.preventDefault();
+					console.log('Form submission intercepted');
+
+					const submitButton = form.querySelector('input[type="submit"]');
+					submitButton.disabled = true;
+					submitButton.value = 'Sending...';
+
+					try {
+						console.log('EmailJS config:', {
+							serviceId: config.emailjs.serviceId,
+							templateId: config.emailjs.templateId,
+							publicKey: config.emailjs.publicKey ? 'exists' : 'missing'
+						});
+
+						const response = await emailjs.sendForm(
+							config.emailjs.serviceId,
+							config.emailjs.templateId,
+							this
+						);
+
+						console.log('EmailJS response:', response);
+
+						if (response.status === 200) {
+							alert('Message sent successfully!');
+							form.reset();
+						} else {
+							throw new Error(`Failed with status: ${response.status}`);
+						}
+					} catch (error) {
+						console.error('EmailJS error:', error);
+						alert('Failed to send message: ' + error.message);
+					} finally {
+						submitButton.disabled = false;
+						submitButton.value = 'Send message';
+					}
+
+					return false; // Extra prevention of form submission
+				});
+			})();
+		</script>
 	</body>
 
 </html>
