--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport"
-			content="width=device-width, initial-scale=1">
+			content="width=device-width, initial-scale=1" />
+		<meta name="description"
+			content="Portfolio of Rory Van Blaricom - Web Developer from California. View my projects and get in touch." />
 		<title>Rory Van Blaricom | Software Developer</title>
 		<link rel="shortcut icon"
 			href="./img/favicon-32x32.png"
@@ -28,39 +30,34 @@
 
 	<body>
 		<header class="page-header">
-			<a href="index.html">
-				<img src="img/class_icon.svg"
-					alt="Logo image (directs to home page)"
-					class="page-header__item"
-					id="page-header__icon" />
-			</a>
-			<nav class="main-navigation page-header__item">
+			<nav class="main-navigation page-header__item"
+				aria-label="Main navigation">
 				<ul role="menubar"
-					class="navigation-list">
-					<li role="presentation">
+					class="navigation-list"
+					aria-label="Main menu">
+					<li role="none">
 						<a href="index.html"
 							role="menuitem"
-							class="navigation-list__item 
-							default__link
-							navigation-list__item--active">Home</a>
+							class="navigation-list__item default__link navigation-list__item--active"
+							aria-current="page">Home</a>
 					</li>
-					<li role="presentation">
+					<li role="none">
 						<a href="about.html"
 							role="menuitem"
-							class="navigation-list__item
-							default__link">About Me</a>
+							class="navigation-list__item default__link"
+							aria-current="false">About Me</a>
 					</li>
-					<li role="presentation">
+					<li role="none">
 						<a href="contact.html"
 							role="menuitem"
-							class="navigation-list__item
-							default__link">Contact</a>
+							class="navigation-list__item default__link"
+							aria-current="false">Contact</a>
 					</li>
-					<li role="presentation">
+					<li role="none">
 						<a href="work.html"
 							role="menuitem"
-							class="navigation-list__item
-							default__link">Work</a>
+							class="navigation-list__item default__link"
+							aria-current="false">Work</a>
 					</li>
 				</ul>
 			</nav>
@@ -68,41 +65,68 @@
 		<section class="profile">
 			<img src="img/mypicture.jpeg"
 				class="profile__portrait"
-				alt="Portrait of Rory Van Blaricom and his dog, Pancake." />
-			<h1 class="heading__index"><span id="hello_world">Hello World!<span id="cli_prompt">_ </span></span></h1>
+				alt="Portrait of Rory Van Blaricom and his dog, Pancake"
+				width="250"
+				height="250" />
+			<h1 id="greeting"
+				class="heading__index">
+				<span id="hello_world">Hello World!<span id="cli_prompt"
+						aria-hidden="true">_</span></span>
+			</h1>
 			<p class="regular_text">
-				My name is Rory Van Blaricom. I am a <span id="code_text">&lt;web&gt;</span> developer from
+				My name is Rory Van Blaricom. I am a <span id="code_text"
+					aria-label="web">&lt;web&gt;</span> developer from
 				California.
 			</p>
-			<a href="work.html"
-				class="default__link">Check out some of my code!</a> |
-			<a href="#"
-				class="default__link">Default Link</a>
-			<div class="button_group">
-				<button type="button"
-					class="button__primary">
-					Default Button
-				</button>
-				<button class="button__secondary">Secondary Button</button>
+			<div class="button_group"
+				role="group"
+				aria-label="Portfolio actions">
+				<a href="contact.html"
+					class="button__primary"
+					role="button"
+					aria-label="Send me a message through a contact form">
+					Send me a message
+				</a>
+				<a href="files/cv.pdf"
+					class="button__secondary"
+					role="button"
+					target="_blank"
+					download
+					aria-label="Download my CV in PDF format">
+					Download my CV
+				</a>
 			</div>
 		</section>
 		<footer class="page-footer">
-			<p class="small_text">Find me on:</p>
-			<div class="social-media">
+			<h2 class="small_text">Find me on:</h2>
+			<div class="social-media"
+				role="list">
 				<a href="https://github.com/RoryV91"
-					class="social-media__item">
+					class="social-media__item"
+					role="listitem"
+					aria-label="Visit my GitHub profile">
 					<img src="img/github_icon.svg"
-						alt="GitHub" />
+						alt=""
+						width="30"
+						height="30" />
 				</a>
 				<a href="https://twitter.com/R0ry_V"
-					class="social-media__item">
+					class="social-media__item"
+					role="listitem"
+					aria-label="Visit my Twitter profile">
 					<img src="img/twitter_icon.svg"
-						alt="Twitter" />
+						alt=""
+						width="30"
+						height="30" />
 				</a>
 				<a href="https://www.linkedin.com/in/rory-van-blaricom/"
-					class="social-media__item">
+					class="social-media__item"
+					role="listitem"
+					aria-label="Visit my LinkedIn profile">
 					<img src="img/linkedin_icon.svg"
-						alt="LinkedIn" />
+						alt=""
+						width="30"
+						height="30" />
 				</a>
 			</div>
 		</footer>
