changed links on work page

--- a/work.html
+++ b/work.html
@@ -92,7 +92,7 @@
 					</p>
 					<a href="#"
 						class="default__link">Demo</a>
-					<a href="#"
+					<a href="https://github.com/RoryV91/myFlix-client"
 						class="default__link">Repository</a>
 				</div>
 				<div class="project-list__item">
@@ -121,9 +121,7 @@
 					<p class="description">
 						Chat App is a real-time chat application built in React Native. It uses Firebase, Firestore, Expo, and Gifted Chat.
 					</p>
-					<a href="#"
-						class="default__link">Demo</a>
-					<a href="#"
+					<a href="https://github.com/RoryV91/ChatApp"
 						class="default__link">Repository</a>
 				</div>
 				<div class="project-list__item">
@@ -138,7 +136,7 @@
 					</p>
 					<a href="#"
 						class="default__link">Demo</a>
-					<a href="#"
+					<a href="https://github.com/RoryV91/HaloCE_FanSite"
 						class="default__link">Repository</a>
 				</div>
 				<div class="project-list__item">
@@ -153,9 +151,7 @@
 						written in React.js. Additionally, I've created the HTML and CSS
 						templates.
 					</p>
-					<a href="#"
-						class="default__link">Demo</a>
-					<a href="#"
+					<a href="https://github.com/RoryV91/meetup"
 						class="default__link">Repository</a>
 				</div>
 			</section>
